force-app/main/default/objects/Account/fields/Bankruptcy_Flag__c.field-meta.xml
<CustomField>
    <fullName>Bankruptcy_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant (Grace)</description>
    <label>Bankruptcy Flag</label>
    <type>Checkbox</type>
</CustomField>