force-app/main/default/objects/Account/fields/beDirect_ID__c.field-meta.xml
<CustomField>
    <fullName>beDirect_ID__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>beDirect ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>