force-app/main/default/objects/Account/fields/Company_Group__c.field-meta.xml
<CustomField>
    <fullName>Company_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integration relevant - GRACE
2. ZRD
3.</description>
    <label>Company Group</label>
    <referenceTo>Company_Group__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>