force-app/main/default/objects/Account/fields/Company_Group_Info__c.field-meta.xml
<CustomField>
    <fullName>Company_Group_Info__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1038</description>
    <formula>Company_Group__r.Company_Group_Info__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Group Info</label>
    <type>Text</type>
</CustomField>