force-app/main/default/objects/Account/fields/Company_Key__c.field-meta.xml
<CustomField>
    <fullName>Company_Key__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integrations relevant - GRACE
2. ZRD
3.</description>
    <label>Company Key</label>
    <referenceTo>Company_Key__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>