force-app/main/default/objects/Account/fields/Core_Accounting_Area_SAP__c.field-meta.xml
<CustomField>
    <fullName>Core_Accounting_Area_SAP__c</fullName>
    <description>1. Integration relevant(Grace)
2. CORE
3.</description>
    <label>Accounting Area SAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0100</fullName>
                <default>true</default>
                <label>ZRD</label>
            </value>
            <value>
                <fullName>0401</fullName>
                <label>ZRA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>