force-app/main/default/objects/Account/fields/Core_Commercial_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Core_Commercial_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>Commercial Administrator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>