force-app/main/default/objects/Account/fields/Core_Company_Size_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Core_Company_Size_Cluster__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>Company Size (Cluster)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>No information</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1-4 Employees</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>5-9 Employees</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>10-19 Employees</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>20-49 Employees</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>50-99 Employees</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>100-199 Employees</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>200-499 Employees</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>500-999 Employees</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>1000-1999 Employees</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>&gt; 2000  Employees</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>