force-app/main/default/objects/Account/fields/Core_Contact_Data_EMail_Distribution_Inv__c.field-meta.xml
<CustomField>
    <fullName>Core_Contact_Data_EMail_Distribution_Inv__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>Contact Data Set E-Mail Distribution Inv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>