force-app/main/default/objects/Account/fields/Core_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Core_Credit_Status__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>Credit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Open</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Attention</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Stop</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Lawyer</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>To be Deleted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>