force-app/main/default/objects/Account/fields/Core_CREFO_Limit__c.field-meta.xml
<CustomField>
    <fullName>Core_CREFO_Limit__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>CREFO Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>