force-app/main/default/objects/Account/fields/Core_CREFO_Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Core_CREFO_Mode_of_Payment__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>CREFO Mode of Payment</label>
    <length>5</length>
    <type>Text</type>
</CustomField>