force-app/main/default/objects/Account/fields/Core_CREFO_Number__c.field-meta.xml
<CustomField>
    <fullName>Core_CREFO_Number__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>CREFO Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>