force-app/main/default/objects/Account/fields/Core_CREFO_Status__c.field-meta.xml
<CustomField>
    <fullName>Core_CREFO_Status__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>CREFO Status</label>
    <type>DateTime</type>
</CustomField>