force-app/main/default/objects/Account/fields/Core_CREFO_Validity__c.field-meta.xml
<CustomField>
    <fullName>Core_CREFO_Validity__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>CREFO Validity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>