force-app/main/default/objects/Account/fields/Core_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Core_Customer_Number__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <externalId>true</externalId>
    <label>Customer Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>