force-app/main/default/objects/Account/fields/Core_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Core_Customer_Type__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Customer</label>
            </value>
            <value>
                <fullName>7</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>