force-app/main/default/objects/Account/fields/Core_Email__c.field-meta.xml
<CustomField>
    <fullName>Core_Email__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>