force-app/main/default/objects/Account/fields/Core_Invoice_via_Post__c.field-meta.xml
<CustomField>
    <fullName>Core_Invoice_via_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>Invoice via Post</label>
    <type>Checkbox</type>
</CustomField>