force-app/main/default/objects/Account/fields/Core_Legal_Status_ID__c.field-meta.xml
<CustomField>
    <fullName>Core_Legal_Status_ID__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>Legal Status ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>50</fullName>
                <label>A/S</label>
            </value>
            <value>
                <fullName>70</fullName>
                <label>AB Gesellschaft mit beschränkter Haftung (SE)</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>AG</label>
            </value>
            <value>
                <fullName>51</fullName>
                <label>ApS</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>ARGE</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>ausländ.Ges.m.b.H.</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>ausländ.Ges.m.unb.H.</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>e.V.</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>eG</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Einzelfirma</label>
            </value>
            <value>
                <fullName>71</fullName>
                <label>Einzelunternehmen (SE)</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Einzelunternehmen DK</label>
            </value>
            <value>
                <fullName>74</fullName>
                <label>Foundation</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>GbR</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>GbRmbH</label>
            </value>
            <value>
                <fullName>01</fullName>
                <label>GmbH</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>GmbH &amp; Co</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>GmbH &amp; CO KG</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>GmbH i.G.</label>
            </value>
            <value>
                <fullName>72</fullName>
                <label>HB Handelsunternehmen (SE)</label>
            </value>
            <value>
                <fullName>73</fullName>
                <label>KB Begrenzte Partnerschaft (SE)</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>KG</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>KGaA</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>KöRe</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Ltd.</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Ltd. &amp; Co. KG</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>oHG</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Partnerschaft</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Privatkunde</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>UG (haftungsbeschr.)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>