force-app/main/default/objects/Account/fields/Core_Lost_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Core_Lost_Customer_Date__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <inlineHelpText>24 months after the last invoice without activity.</inlineHelpText>
    <label>Lost Customer Date</label>
    <type>DateTime</type>
</CustomField>