force-app/main/default/objects/Account/fields/Core_Modified_by_User__c.field-meta.xml
<CustomField>
    <fullName>Core_Modified_by_User__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Modified by User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>