force-app/main/default/objects/Account/fields/Core_New_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Core_New_Customer_Date__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>New Customer until</label>
    <type>DateTime</type>
</CustomField>