force-app/main/default/objects/Account/fields/Core_Sales_Tax_ID_No__c.field-meta.xml
<CustomField>
    <fullName>Core_Sales_Tax_ID_No__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>Sales Tax ID No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>