force-app/main/default/objects/Account/fields/Core_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>Core_Tax_Number__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>Tax Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>