force-app/main/default/objects/Account/fields/Core_WZ_Code_1__c.field-meta.xml
<CustomField>
    <fullName>Core_WZ_Code_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integration relevant (Grace)
2. Core
3.</description>
    <label>WZ Code 1</label>
    <referenceTo>Core_WZ_Code__c</referenceTo>
    <relationshipLabel>Accounts WZ Code 1</relationshipLabel>
    <relationshipName>Accounts_WZ_1</relationshipName>
    <type>Lookup</type>
</CustomField>