force-app/main/default/objects/Account/fields/Creation_User__c.field-meta.xml
<CustomField>
    <fullName>Creation_User__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3. Set by &quot;Account before Insert&quot; Flow or by Integration</description>
    <label>Creation User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>