force-app/main/default/objects/Account/fields/Currently_outstanding_Positions__c.field-meta.xml
<CustomField>
    <fullName>Currently_outstanding_Positions__c</fullName>
    <description>1. Integration relevant (Grace)
2. CORE
3.</description>
    <label>Currently outstanding Positions (sum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>