force-app/main/default/objects/Account/fields/Customer_Relation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relation__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Customer Relation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>