force-app/main/default/objects/Account/fields/Date_last_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Date_last_Invoice__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Date last Invoice</label>
    <type>DateTime</type>
</CustomField>