force-app/main/default/objects/Account/fields/Deletion_Code__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Deletion Code</label>
    <type>Checkbox</type>
</CustomField>