force-app/main/default/objects/Account/fields/First_Agreement__c.field-meta.xml
<CustomField>
    <fullName>First_Agreement__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>First Agreement</label>
    <length>15</length>
    <type>Text</type>
</CustomField>