force-app/main/default/objects/Account/fields/Infobau_Id__c.field-meta.xml
<CustomField>
    <fullName>Infobau_Id__c</fullName>
    <description>1. Integration relevant (BIS)
2. ZBM
3. Used to map a Salesforce Account to an Account in BIS to be able to connect them to Projects. Set by migration or via Flow ??????</description>
    <externalId>true</externalId>
    <label>Infobau Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>