force-app/main/default/objects/Account/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>