force-app/main/default/objects/Account/fields/Key_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Key Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KeyAccount</relationshipName>
    <type>Lookup</type>
</CustomField>