force-app/main/default/objects/Account/fields/Last_Credit_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Last_Credit_Assessment__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Last Credit Assessment</label>
    <type>Date</type>
</CustomField>