force-app/main/default/objects/Account/fields/Last_external_Update_beDirect__c.field-meta.xml
<CustomField>
    <fullName>Last_external_Update_beDirect__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Last external Update (beDirect)</label>
    <type>DateTime</type>
</CustomField>