force-app/main/default/objects/Account/fields/Last_Modified_By_System__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_System__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-913</description>
    <formula>IF( LastModifiedBy.FirstName = &quot;Integration&quot;, &quot;GRACE&quot;, &quot;Salesforce&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified By System</label>
    <type>Text</type>
</CustomField>