force-app/main/default/objects/Account/fields/Leitweg_ID_X_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Leitweg_ID_X_Invoice__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Leitweg ID X Invoice</label>
    <length>50</length>
    <type>Text</type>
</CustomField>