force-app/main/default/objects/Account/fields/Name3__c.field-meta.xml
<CustomField>
    <fullName>Name3__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Name 3</label>
    <length>35</length>
    <type>Text</type>
</CustomField>