force-app/main/default/objects/Account/fields/Not_invoiced_order_value__c.field-meta.xml
<CustomField>
    <fullName>Not_invoiced_order_value__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Not invoiced order value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>