force-app/main/default/objects/Account/fields/Old_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Customer_Number__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Old Customer Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>