force-app/main/default/objects/Account/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Helper Field to display the Owner Full Name in List Views.</description>
    <formula>HYPERLINK(&apos;/&apos; + OwnerId ,  Owner.FirstName + &quot; &quot; +  Owner.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>