force-app/main/default/objects/Account/fields/Rating_BBI_Credit_Report_B_rgel_Index__c.field-meta.xml
<CustomField>
    <fullName>Rating_BBI_Credit_Report_B_rgel_Index__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Rating BBI (Credit Report Bürgel Index)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>