force-app/main/default/objects/Account/fields/Risk_Class_Denomination__c.field-meta.xml
<CustomField>
    <fullName>Risk_Class_Denomination__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Risk Class Denomination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Very low default risk</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Low default risk</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Below average default risk</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Average default risk</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Above average default risk</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Clearly above average default risk</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Far above average default risk</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Very high default risk</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Default</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>