force-app/main/default/objects/Account/fields/Special_Rental_Price_List__c.field-meta.xml
<CustomField>
    <fullName>Special_Rental_Price_List__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Special Rental Price List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>