force-app/main/default/objects/Account/fields/Subject_Invoicing_Email__c.field-meta.xml
<CustomField>
    <fullName>Subject_Invoicing_Email__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Subject Invoicing Email</label>
    <length>200</length>
    <type>Text</type>
</CustomField>