force-app/main/default/objects/Account/fields/Territory_Account__c.field-meta.xml
<CustomField>
    <fullName>Territory_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant (GRACE)
2. ZRD
3. SF-1034</description>
    <label>Territory Account</label>
    <type>Checkbox</type>
</CustomField>