force-app/main/default/objects/Account/fields/Total_Checksum__c.field-meta.xml
<CustomField>
    <fullName>Total_Checksum__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZR
3. Helper Field for Integration</description>
    <label>Total Checksum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>