force-app/main/default/objects/Account/fields/Validation_Self_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Validation_Self_Insurance__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>Validation Self-Insurance</label>
    <type>DateTime</type>
</CustomField>