force-app/main/default/objects/Account/fields/ZBM_Agent__c.field-meta.xml
<CustomField>
    <fullName>ZBM_Agent__c</fullName>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>ZBM Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>