force-app/main/default/objects/Account/fields/ZUGFeRD_Data_Export__c.field-meta.xml
<CustomField>
    <fullName>ZUGFeRD_Data_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1. Integration relevant (Grace)
2. ZR
3.</description>
    <label>ZUGFeRD Data Export</label>
    <type>Checkbox</type>
</CustomField>