force-app/main/default/objects/Account/recordTypes/ZR_ARGE_Customer.recordType-meta.xml
<RecordType>
    <fullName>ZR_ARGE_Customer</fullName>
    <active>true</active>
    <description>Record type for ARGE-Accounts with type customer</description>
    <label>ARGE Customer</label>
</RecordType>