force-app/main/default/objects/Account/recordTypes/ZR_ARGE_Prospect.recordType-meta.xml
<RecordType>
    <fullName>ZR_ARGE_Prospect</fullName>
    <active>true</active>
    <description>Record type for ARGE-Accounts with type prospect</description>
    <label>ARGE Prospect</label>
</RecordType>