force-app/main/default/objects/Account/recordTypes/ZR_Standard_Account_Customer.recordType-meta.xml
<RecordType>
    <fullName>ZR_Standard_Account_Customer</fullName>
    <active>true</active>
    <description>Record type for accounts with type customer</description>
    <label>Account Customer</label>
</RecordType>