force-app/main/default/objects/Account/recordTypes/ZR_Standard_Account_Prospect.recordType-meta.xml
<RecordType>
    <fullName>ZR_Standard_Account_Prospect</fullName>
    <active>true</active>
    <description>Record type for accounts with type prospect</description>
    <label>Account Prospect</label>
</RecordType>